force-app/main/default/objects/Account/fields/BillingRecipientType__c.field-meta.xml
<CustomField><fullName>BillingRecipientType__c</fullName><label>Type de destinataire</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>PrivateBusiness</fullName><default>true</default><label>Entreprise privée française</label></value><value><fullName>PublicSector</fullName><default>false</default><label>Secteur public</label></value><value><fullName>Consumer</fullName><default>false</default><label>Particulier</label></value><value><fullName>ForeignBusiness</fullName><default>false</default><label>Entreprise étrangère</label></value></valueSetDefinition></valueSet></CustomField>