force-app/main/default/objects/Account/fields/BillingRegistrationNumber__c.field-meta.xml
<CustomField><fullName>BillingRegistrationNumber__c</fullName><label>SIREN de facturation</label><length>20</length><required>false</required><type>Text</type></CustomField>