force-app/main/default/objects/Account/fields/BillingSiret__c.field-meta.xml
<CustomField><fullName>BillingSiret__c</fullName><label>SIRET de facturation</label><length>14</length><required>false</required><type>Text</type></CustomField>