force-app/main/default/objects/Account/fields/BillingTaxId__c.field-meta.xml
<CustomField><fullName>BillingTaxId__c</fullName><label>Numéro de TVA de facturation</label><length>40</length><required>false</required><type>Text</type></CustomField>